--- a/clase6/contacto.html
+++ b/clase6/contacto.html
@@ -54,12 +54,17 @@
                     </select>
 
                     <div>
-                        <label for="pais">Argentina</label>
-                        <input type="radio" name="pais" value="Argentina">
-                        <label for="pais">Paraguay</label>
-                        <input type="radio" name="pais" value="Paraguay">
-                        <label for="pais">Uruguay</label>
-                        <input type="radio" name="pais" value="Uruguay">
+                        <div class="uruguay">
+                        <label for="pais">Argentina</label><input type="radio" name="pais" value="Argentina"> </div>
+                        
+                        <div class="uruguay">
+                        
+                        <label for="pais">Paraguay</label><input type="radio" name="pais" value="Paraguay">
+                    </div>
+                    <div class="uruguay">
+                        <label for="pais">Uruguay</label><input type="radio" name="pais" value="Uruguay">
+                    </div>
+
                     </div>
                 </div>
                 <div>
